--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="chart-container">
         <canvas id="productivityChart" width="400" height="200"></canvas>
         </div>
+        <div>
+            <footer class="footer">Desenvolvido por Marcelo Machado ✨</footer>
+        </div>
     </div>
 
     <audio id="alarm-sound" src="alarm.mp3" preload="auto"></audio>
